# ontolemic

./: .gitignore  Makefile  README.md  inner-cosmos.the-o.space.conf  package-lock.json  package.json  setup-ssl-secondary.sh  setup-ssl.sh  setup.sh
.github/workflows/: build-check.yml  checks.yml  deploy.yml  pr-checks.yml  push-checks.yml  release-on-tag.yml
backend/: README.md  main.py  package-lock.json  package.json  pyproject.toml  run.py  stats.db  tsconfig.json
backend/scripts/: delete-db.js  reset-stats.js  reset-stats.sql  safe-reset-stats.js  start-prod  start-prod.sh  verify-and-reset-stats.js
backend/src/: __init__.py  app.py  database.py  main.py  scheduler.py  server.ts
backend/src/api/: __init__.py  code.py  health.py  stats.py  websockets.py
backend/src/db/: init.ts
backend/src/middleware/: session.ts  tracking.ts
backend/src/models/: __init__.py  session.py  visitor.py
backend/src/routes/: stats.ts
backend/src/schemas/: __init__.py  code.py  heartbeat.py
backend/src/services/: __init__.py  code_execution.py  geoService.ts  realtimeStatsService.ts  sessionCleanup.ts  stats.py  statsService.ts
backend/src/websockets/: __init__.py  connection_manager.py
docs/: PAGE_THUMBNAILS.md  SEARCH_ARCHITECTURE.md  WEBSITE_ARCHITECTURE.md  fun-analytics-ideas.md  stat-backend.md  stats-database-design.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  jest.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/public/: instructions.md
frontend/src/: App.tsx  index.css  (+1 more)
scripts/: fetch-favicon.js  package-frontend.sh  prod-server.sh
shared/: types.ts
(+148 files in other folders)
