[project]
name = "inner-cosmos-backend"
version = "1.0.0"
description = "FastAPI backend for Inner Cosmos personal website"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.41",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "pydantic-settings>=2.10.1",
    "httpx>=0.27.2",
]

[project.scripts]
prod = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
dev = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W"]

[tool.ruff.isort]
force-single-line = false
force-sort-within-sections = true 
